# commit-cannon

./: .gitignore  AGENTS.md  README.md  generate.py  pyproject.toml  run.sh
.github/workflows/: ci.yml  report-verification.yml
commit_cannon/: __init__.py  benchmark.py  cli.py  compare.py  stream.py  suite.py  verify.py
docs/: reference-review.md  report-comparison.md  security-audit.md  statistical-suites.md
scripts/: repository_check.py
tests/: test_atomic_keep.py  test_benchmark.py  test_compare.py  test_stream.py  test_suite.py  test_verify.py
