[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-cannon-local-benchmark"
version = "1.0.0"
description = "Bounded local benchmark for Git fast-import"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
commit-cannon = "commit_cannon.cli:main"

[tool.setuptools]
packages = ["commit_cannon"]
